[package]
name = "cds"
version = "0.0.1"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "Collection of Data Structures"
license = "MIT OR Apache-2.0"
keywords = ["collections"]
categories = ["data-structures"]
repository = "https://github.com/r-bk/cds"
exclude = [".git*", "Makefile.toml"]

[features]
default = []
arrayvec = []
std = []

[dependencies]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
