[package]
name = "cds"
version = "0.10.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "Collection of Optimized Data Structures"
license = "MIT OR Apache-2.0"
keywords = ["small", "secure", "vector", "string"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/r-bk/cds"
exclude = [".git*", "Makefile.toml"]

[features]
default = ["std", "arrayvec", "arraystring", "smallvec"]
arrayvec = []
arraystring = []
alloc = []
std = ["alloc"]
smallvec = ["alloc"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    ".",
    "fuzz",
    "bench",
]
