[package]
name = "cds_bench"
version = "0.0.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
publish = false
edition = "2021"

[dependencies]
criterion = { version = "=0.3.5", features = ["cargo_bench_support", "html_reports"] }
arrayvec = "=0.7.2"
smallvec = "=1.8.0"
heapless = "=0.7.10"

[dependencies.cds]
path = ".."
features = [
    "arrayvec",
    "std",
]

[[bench]]
name = "arrayvec"
harness = false
